fix: adjust selected item alignment

--- a/packages/components/src/components/telekom/telekom-mobile-menu-item/telekom-mobile-menu-item.css
+++ b/packages/components/src/components/telekom/telekom-mobile-menu-item/telekom-mobile-menu-item.css
@@ -15,9 +15,7 @@
 :host::part(level-0) {
   --_spacing-level: 0px;
 }
-:host::part(level-0 active) {
-  --_spacing-level: 12px;
-}
+
 :host::part(level-0 open) {
   --_spacing-level: 36px;
 }
